--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script language=javascript>
     var rev = "fwd";
     function titlebar(val){
-        var msg  = "FN-WAVE.STORE";
+        var msg  = "FortniteShopping.com";
         var res = " ";
         var speed = 70;
         var pos = val;
@@ -49,7 +49,7 @@
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-<title>FN-WAVE.STORE</title>
+<title>FortniteShopping.com</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 
@@ -106,7 +106,7 @@
 <div class="page-loader" id="page-loader">
 <div>
 <div class="icon icon-spin"></div>
-<p>FN-WAVE</p>
+<p>FortniteShopping.com</p>
 </div>
 </div>
 
@@ -118,7 +118,7 @@
 <img class="light-logo" src="img/logo.png" alt="Simpleux Template">
 </span>
 <span class="text ms-3">
-<span class="line strong">FN-WAVE</span>
+<span class="line strong">FortniteShopping.com</span>
 <span class="line sub">Get your OG Fortnite account today!</span>
 </span>
 </a>
@@ -204,7 +204,7 @@
 <div class="content-col col-12 col-md-8 col-lg-8">
 
 <div class="title-desc">
-<h1 data-scroll data-scroll-speed="1" class="display-title  anim-1" style="text-align: center;"><b>FN-WAVE.STORE</b></h1>
+<h1 data-scroll data-scroll-speed="1" class="display-title  anim-1" style="text-align: center;"><b>FortniteShopping.com</b></h1>
 <p data-scroll data-scroll-speed="3" class="anim-2 hero-desc"> <b>Buy your dream account today!</b><br>Get OG account in 2023 and <br>cause envy!</p>
 </div>
 
@@ -970,7 +970,7 @@ Im satisfy all works perfect. legit and +rep :)
 <footer id="site-footer" class="footer-page ">
 
 <div class="footer-left">
-<p class="note text-sm">FN-Wave.store &copy; 2019 - 2023 <a href="index-2.html"><span class="marked"></span>
+<p class="note text-sm">FortniteShopping.com &copy; 2019 - 2023 <a href="index-2.html"><span class="marked"></span>
 </p>
 </div>
 
