--- a/index.html
+++ b/index.html
@@ -1,50 +1,10 @@
-<script language=javascript>
-    var rev = "fwd";
-    function titlebar(val){
-        var msg  = "FN-WAVE.STORE";
-        var res = " ";
-        var speed = 70;
-        var pos = val;
-        msg = "   "+msg+"|2019-2023";
-        var le = msg.length;
-        if(rev == "fwd"){
-            if(pos < le){
-                pos = pos+1;
-                scroll = msg.substr(0,pos);
-                document.title = scroll;
-                timer = window.setTimeout("titlebar("+pos+")",speed);
-            }
-            else {
-                rev = "bwd";
-                timer = window.setTimeout("titlebar("+pos+")",speed);
-            }
-        }
-        else {
-            if(pos > 0) {
-                pos = pos-1;
-                var ale = le-pos;
-                scrol = msg.substr(ale,le);
-                document.title = scrol;
-                timer = window.setTimeout("titlebar("+pos+")",speed);
-            }
-            else {
-                rev = "fwd";
-                timer = window.setTimeout("titlebar("+pos+")",speed);
-            }
-        }
-    }
-    titlebar(0);
-</script>
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="08bc18c3-4469-4041-827d-9097f32c654f";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 
 
-<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="05f2b013-548d-49ae-9a10-067a897b2cee";(function(){d=document;s=d.createElement("script");s.src="../client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 <!doctype html>
 <html class="no-js smooth-scroll" lang="en">
 
 <!-- Mirrored from vanitycheats.xyz/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 26 Sep 2021 10:46:48 GMT -->
-
-<!-- Mirrored from fn-wave.store/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 10 Feb 2023 18:12:36 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -71,7 +31,7 @@
 
 <link rel="stylesheet" href="css/main.css">
 
-<link rel="stylesheet" href="css/style-default.html">
+<link rel="stylesheet" href="css/style-default.css">
 <script src="js/vendor/modernizr-2.7.1.min.html" type="4e6716e72b869eb3a52630a3-text/javascript"></script>
 <script async src='cdn-cgi/challenge-platform/h/b/scripts/invisible.js'></script></head>
 <body id="menu" class="body-page">
@@ -114,13 +74,13 @@
 <header class="navbar-top navbar navbar-a navbar-expand-lg navbar-dark ">
 <nav class="container-fluid px-0">
 
-<a class="navbar-brand" href="index-2.html">
+<a class="navbar-brand" href="index.html">
 <span class="logo">
 <img class="light-logo" src="img/logo.png" alt="Simpleux Template">
 </span>
 <span class="text ms-3">
 <span class="line strong">FN-WAVE</span>
-<span class="line sub">Get your OG Fortnite account today!</span>
+<span class="line sub">Best fortnite account & giftcard shop</span>
 </span>
 </a>
 
@@ -146,7 +106,7 @@
 <div class="nav-fullscreen-lg">
 <ul class="navbar-nav nav">
 <li class="nav-item">
-<a class="nav-link" href="index-2.html">HOME</a>
+<a class="nav-link" href="index.html">HOME</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="#products">SHOP</a>
@@ -206,7 +166,7 @@
 
 <div class="title-desc">
 <h1 data-scroll data-scroll-speed="1" class="display-title  anim-1" style="text-align: center;"><b>FN-WAVE.STORE</b></h1>
-<p data-scroll data-scroll-speed="3" class="anim-2 hero-desc"> <b>Buy your dream account today!</b><br>Get OG account in 2023 and <br>cause envy!</p>
+<p data-scroll data-scroll-speed="3" class="anim-2 hero-desc"> <b>Fortnite Account & Giftcard Shop</b><br>we offer cheap OG accounts for a <br>low price.</p>
 </div>
 
 
@@ -246,7 +206,7 @@
 <p style="color:black;"><img src="ok.gif" style="height:20px; width:20px;"></img><b>Access type</b>: FA [FULL ACCESS]</p>
 <p style="color:black;"><img src="ok.gif" style="height:20px; width:20px;"></img><b>Delivery</b>: INSTANT [max 5 minutes]</p>
 	  
-	  <h4 style="color:black;"><sup class="description" style="color:black;">$</sup ><b>65,99</b><span></span></h4>
+	  <h4 style="color:black;"><sup class="description" style="color:black;">$</sup ><b>42,99</b><span></span></h4>
 	<input type="text" placeholder="Delivery E-mail adress" style="height:40px;border-top-left-radius:5px;border-top-right-radius:5px;border-bottom-right-radius:5px;border-bottom-left-radius:5px"> </>
 	                
                 <a href="https://www.paypal.com/donate/?hosted_button_id=UU238XWBG9EU4" class="cta-btn">Pay With Paypal/Credit Card</a>
@@ -501,7 +461,7 @@
 </div>
 <div class="item-body">
 <h4>DELIVERY</h4>
-<p>Thanks to our system, immediately after the payment is made, you will receive EPIC games data and GMAIL login details so that you can be sure that you have 100% ownership of the account.</p>
+<p>Product information is instantly delivered to you on the newly opened page and is instantly sent to your e-mail address.</p>
 </div>
 </div>
 </div>
@@ -516,7 +476,7 @@
 </div>
 <div class="item-body">
 <h4>SUPPORT</h4>
-<p>Our support is available to you practically all the time, feel free to contact us if you have any doubts or questions!</p>
+<p>If you have problem, question, we will help you! write to us and someone will contact you!</p>
 </div>
 </div>
 </div>
@@ -548,7 +508,7 @@
 <div class="col-12 col-lg-8 text-left">
 
 <div class="title-desc" data-anim-visible='fade'>
-<h2 class="display-3 anim-1 mb-4">FULL ACCESS ACCOUNTS</h2>
+<h2 class="display-3 anim-1 mb-4">OG ACCOUNTS</h2>
 <p class="anim-2"></p>
 </div>
 </div>
@@ -573,13 +533,12 @@
 <hr class="hr-a">
 </div>
 <div class="col-auto">
-	<span class="price">49,99$ <del>65,99</del></span>
+<span class="price">42,99$</span>
 
 <p><b>Bonus skins</b>: +110</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
 <p><b>Email type</b>: GMAIL</p>
 <p><b>Access type</b>: FA [FULL ACCESS]</p>
-	<p><b>IN STOCK: 1</b></p>
 </div>
 </div>
 
@@ -594,7 +553,7 @@
 </div>
 <div class="col">
 
-<a class="item item-image-b" href="OG%20Ghoul%20Trooper.html" data-anim-visible='fade'>
+<a class="item item-image-b" href="OG Ghoul Trooper.html" data-anim-visible='fade'>
 <div class="item-img rounded-md">
 <img class="fit" src="1.png" alt="team member">
 </div>
@@ -610,11 +569,10 @@
 <div class="col-auto">
 <span class="price">35,99$</span>
 
-<p><b>Bonus skins</b>: +95</p>
+<p><b>Bonus skins</b>: +115</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
 <p><b>Email type</b>: GMAIL</p>
 <p><b>Access type</b>: FA [FULL ACCESS]</p>
-		<p><b>IN STOCK: 1</b></p>
 </div>
 </div>
 
@@ -643,13 +601,12 @@
 <hr class="hr-a">
 </div>
 <div class="col-auto">
-<span class="price">16,99$</span>
+<span class="price">30,99$</span>
 
-<p><b>Bonus skins</b>: +44</p>
+<p><b>Bonus skins</b>: +95</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
 <p><b>Email type</b>: GMAIL</p>
 <p><b>Access type</b>: FA [FULL ACCESS]</p>
-		<p><b>IN STOCK: 1</b></p>
 </div>
 </div>
 
@@ -677,13 +634,12 @@
 <hr class="hr-a">
 </div>
 <div class="col-auto">
-<span class="price">13,99$</span>
+<span class="price">25,99$</span>
 
-<p><b>Bonus skins</b>: +15</p>
+<p><b>Bonus skins</b>: +120</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
 <p><b>Email type</b>: GMAIL</p>
 <p><b>Access type</b>: FA [FULL ACCESS]</p>
-		<p><b>IN STOCK: 3</b></p>
 </div>
 </div>
 
@@ -699,7 +655,7 @@
 
 <div class="col">
 
-<a class="item item-image-b" href="#OUTOFSTOCK" data-anim-visible='fade'>
+<a class="item item-image-b" href="ikonik.html" data-anim-visible='fade'>
 <div class="item-img rounded-md">
 <img class="fit" src="8.png" alt="team member">
 </div>
@@ -713,13 +669,12 @@
 <hr class="hr-a">
 </div>
 <div class="col-auto">
-<span class="price">OUT OF STOCK</span>
+<span class="price">25,99$</span>
 
-<p><b>Bonus skins</b>: +27</p>
+<p><b>Bonus skins</b>: +90</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
 <p><b>Email type</b>: GMAIL</p>
 <p><b>Access type</b>: FA [FULL ACCESS]</p>
-		<p><b>IN STOCK: 0</b></p>
 </div>
 </div>
 
@@ -734,7 +689,7 @@
 </div>
 <div class="col">
 
-<a class="item item-image-b" href="OG%20Skull%20Trooper.html" data-anim-visible='fade'>
+<a class="item item-image-b" href="OG Skull Trooper.html" data-anim-visible='fade'>
 <div class="item-img rounded-md">
 <img class="fit" src="5.png" alt="team member">
 </div>
@@ -748,13 +703,12 @@
 <hr class="hr-a">
 </div>
 <div class="col-auto">
-<span class="price">30,99$</span>
+<span class="price">35,99$</span>
 
-<p><b>Bonus skins</b>: +62</p>
+<p><b>Bonus skins</b>: +120</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
 <p><b>Email type</b>: GMAIL</p>
 <p><b>Access type</b>: FA [FULL ACCESS]</p>
-		<p><b>IN STOCK: 2</b></p>
 </div>
 </div>
 
@@ -767,7 +721,7 @@
 </a>
 
 </div>
-<a class="item item-image-b" href="BLACK%20KNIGHT.html" data-anim-visible='fade'>
+<a class="item item-image-b" href="BLACK KNIGHT.html" data-anim-visible='fade'>
 <div class="item-img rounded-md">
 <img class="fit" src="4.png" alt="team member">
 </div>
@@ -781,13 +735,12 @@
 <hr class="hr-a">
 </div>
 <div class="col-auto">
-<span class="price">16,99$</span>
+<span class="price">35,99$</span>
 
-<p><b>Bonus skins</b>: +21</p>
+<p><b>Bonus skins</b>: +100</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
 <p><b>Email type</b>: GMAIL</p>
 <p><b>Access type</b>: FA [FULL ACCESS]</p>
-		<p><b>IN STOCK: 1</b></p>
 </div>
 </div>
 
@@ -800,6 +753,174 @@
 </a>
 
 </div>
+
+
+
+
+
+</div>
+</div>
+
+</div>
+</div>
+
+</section>
+<section class="section section-a fullscreen-h-lg services" data-section="products">
+<div class="section-title title-anim sticky-title-off">
+
+</div>
+
+<div class="section-body">
+
+<div class="section-content container content-width anim">
+<div class="row mb-4">
+<div class="col-12 col-lg-8 text-left">
+
+<div class="title-desc" data-anim-visible='fade'>
+<h2 class="display-3 anim-1 mb-4">V-BUCKS</h2>
+<p class="anim-2"></p>
+</div>
+</div>
+
+</div>
+
+<div class="part-wrapper">
+<div class="item-list row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5 anim-list">
+<div class="col">
+
+<a class="item item-image-b" href="#OUTOFSTOCK"  data-anim-visible='fade'>
+<div class="item-img rounded-md">
+<img class="fit" src="1dolce.png" alt="team member">
+</div>
+<div class="item-body">
+<div class="desc">
+<div class="row">
+<div class="col-auto">
+<h4>1000 V-BUCKS</h4>
+</div>
+<div class="col">
+<hr class="hr-a">
+</div>
+<div class="col-auto">
+<span class="price">OUT OF STOCK</span>
+
+<p><b>Type</b>: Giftcard</p>
+<p><b>code</b>: XXXX-XXXX-XXXX-XXXX</p>
+
+</div>
+</div>
+
+
+
+
+
+</div>
+</div>
+</a>
+
+</div>
+<div class="col">
+
+<a class="item item-image-b" href="#OUTOFSTOCK" data-anim-visible='fade'>
+<div class="item-img rounded-md">
+<img class="fit" src="2dolce.png" alt="team member">
+</div>
+<div class="item-body">
+<div class="desc">
+<div class="row">
+<div class="col-auto">
+<h4>2800 V-BUCKS</h4>
+</div>
+<div class="col">
+<hr class="hr-a">
+</div>
+<div class="col-auto">
+<span class="price">OUT OF STOCK</span>
+
+<p><b>Type</b>: Giftcard</p>
+<p><b>code</b>: XXXX-XXXX-XXXX-XXXX</p>
+
+</div>
+</div>
+
+
+
+
+
+</div>
+</div>
+</a>
+
+</div>
+<div class="col">
+
+<a class="item item-image-b" href="#OUTOFSTOCK"  data-anim-visible='fade'>
+<div class="item-img rounded-md">
+<img class="fit" src="3dolce.png" alt="team member">
+</div>
+<div class="item-body">
+<div class="desc">
+<div class="row">
+<div class="col-auto">
+<h4>5000 V-BUCKS</h4>
+</div>
+<div class="col">
+<hr class="hr-a">
+</div>
+<div class="col-auto">
+<span class="price">OUT OF STOCK</span>
+
+<p><b>Type</b>: Giftcard</p>
+<p><b>code</b>: XXXX-XXXX-XXXX-XXXX</p>
+
+</div>
+</div>
+
+
+
+
+
+</div>
+</div>
+</a>
+
+
+</div>
+<div class="col">
+
+<a class="item item-image-b" href="#OUTOFSTOCK"  data-anim-visible='fade'>
+<div class="item-img rounded-md">
+<img class="fit" src="3dolce.png" alt="team member">
+</div>
+<div class="item-body">
+<div class="desc">
+<div class="row">
+<div class="col-auto">
+<h4>13500 V-BUCKS</h4>
+</div>
+<div class="col">
+<hr class="hr-a">
+</div>
+<div class="col-auto">
+<span class="price">OUT OF STOCK</span>
+
+<p><b>Type</b>: Giftcard</p>
+<p><b>code</b>: XXXX-XXXX-XXXX-XXXX</p>
+
+</div>
+</div>
+
+
+
+
+
+</div>
+</div>
+</a>
+
+
+</div>
+
 
 
 
@@ -971,7 +1092,7 @@ Im satisfy all works perfect. legit and +rep :)
 <footer id="site-footer" class="footer-page ">
 
 <div class="footer-left">
-<p class="note text-sm">FN-Wave.store &copy; 2019 - 2023 <a href="index-2.html"><span class="marked"></span>
+<p class="note text-sm">FN-Wave.store &copy; 2019 - 2022 <a href="index.html"><span class="marked"></span>
 </p>
 </div>
 
@@ -1045,7 +1166,7 @@ Im satisfy all works perfect. legit and +rep :)
 }
 </script>
 <script src="js/bootstrap.min.js" type="4e6716e72b869eb3a52630a3-text/javascript"></script>
-<script src="kit.fontawesome.com/3bf9a947dc.html" crossorigin="anonymous" type="4e6716e72b869eb3a52630a3-text/javascript"></script>
+<script src="../kit.fontawesome.com/3bf9a947dc.js" crossorigin="anonymous" type="4e6716e72b869eb3a52630a3-text/javascript"></script>
 
 <script src="js/swiper/swiper-bundle.min.js" type="4e6716e72b869eb3a52630a3-text/javascript"></script>
 <script src="js/rellax/rellax-custom.js" type="4e6716e72b869eb3a52630a3-text/javascript"></script>
@@ -1060,6 +1181,4 @@ Im satisfy all works perfect. legit and +rep :)
 <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="4e6716e72b869eb3a52630a3-|49" defer=""></script><script type="text/javascript">(function(){window['__CF$cv$params']={r:'694be921bf68691c',m:'67NHT2JGdkwdi4XKeUf1tRYTRhgqvMvGRXmfB7YhtgA-1632653209-0-AVEDXLzoAjVw/yKKeFGd7xxUa/l7KTO0+3dQdUciXDnkjt4ErHlwKrvK2swWZ64Tv2mtFh/r3++UQsyTQ5OD++YgLPO7wOAYtJRG4TtbUv6Ih4Xg2u4oBaee9yRHnON//A==',s:[0x0edefee59f,0xa16354e5e4],u:'/cdn-cgi/challenge-platform/h/b'}})();</script></body>
 
 <!-- Mirrored from vanitycheats.xyz/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 26 Sep 2021 10:46:56 GMT -->
-
-<!-- Mirrored from fn-wave.store/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 10 Feb 2023 18:12:36 GMT -->
 </html>
