--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-<title>FN-WAVE.STORE</title>
+<title>FortniteShopping.com</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 
@@ -67,7 +67,7 @@
 <div class="page-loader" id="page-loader">
 <div>
 <div class="icon icon-spin"></div>
-<p>FN-WAVE</p>
+<p>FortniteShopping</p>
 </div>
 </div>
 
@@ -79,7 +79,7 @@
 <img class="light-logo" src="img/logo.png" alt="Simpleux Template">
 </span>
 <span class="text ms-3">
-<span class="line strong">FN-WAVE</span>
+<span class="line strong">FortniteShopping</span>
 <span class="line sub">Best fortnite account & giftcard shop</span>
 </span>
 </a>
@@ -165,7 +165,7 @@
 <div class="content-col col-12 col-md-8 col-lg-8">
 
 <div class="title-desc">
-<h1 data-scroll data-scroll-speed="1" class="display-title  anim-1" style="text-align: center;"><b>FN-WAVE.STORE</b></h1>
+<h1 data-scroll data-scroll-speed="1" class="display-title  anim-1" style="text-align: center;"><b>FortniteShopping.com</b></h1>
 <p data-scroll data-scroll-speed="3" class="anim-2 hero-desc"> <b>Fortnite Account & Giftcard Shop</b><br>we offer cheap OG accounts for a <br>low price.</p>
 </div>
 
@@ -949,7 +949,7 @@
 
 <div class="title-desc pe-lg-5" data-anim-visible='fade'>
 <h2 class="display-3 anim-1 mb-4">Our goal</h2>
-<p class="anim-2">We are well aware that everyone would like to gamble or have a good fortnite account that everyone will be jealous of! here we are FN-WAVE from gamers to gamers! we offer OG fortnite accounts at such prices so that you do not have to rob the bank! all with convenient payment methods</p>
+<p class="anim-2">We are well aware that everyone would like to gamble or have a good fortnite account that everyone will be jealous of! here we are FortniteShopping from gamers to gamers! we offer OG fortnite accounts at such prices so that you do not have to rob the bank! all with convenient payment methods</p>
 </div>
 </div>
 <div class="col-12 col-lg-5 text-left">
@@ -1092,7 +1092,7 @@ Im satisfy all works perfect. legit and +rep :)
 <footer id="site-footer" class="footer-page ">
 
 <div class="footer-left">
-<p class="note text-sm">FN-Wave.store &copy; 2019 - 2022 <a href="index.html"><span class="marked"></span>
+<p class="note text-sm">FortniteShopping.com &copy; 2019 - 2022 <a href="index.html"><span class="marked"></span>
 </p>
 </div>
 
