--- a/refund.html
+++ b/refund.html
@@ -51,13 +51,13 @@ window.onload = function () {
 <html lang="en">
 
 
-<!-- Mirrored from fn-wave.store/refund.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 10 Feb 2023 18:12:40 GMT -->
+<!-- Mirrored from fortniteshopping.com/refund.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 10 Feb 2023 18:12:40 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>FN-Wave.store</title>
+  <title>FortniteShopping.com</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -95,7 +95,7 @@ window.onload = function () {
       <div class="logo">
         <!-- Uncomment below if you prefer to use an text logo -->
         <!-- <h1><a href="index.html">NewBiz</a></h1> -->
-        <a href="index-2.html"><img src="assets/img/index.html" alt="" class="img-fluid"></a><h2>FN-WAVE</h2>
+        <a href="index-2.html"><img src="assets/img/index.html" alt="" class="img-fluid"></a><h2>FortniteShopping</h2>
       </div>
 
       <nav id="navbar" class="navbar">
@@ -245,7 +245,7 @@ window.onload = function () {
     <div class="container">
       <div class="copyright">
 
-        &copy; Copyright <strong>fn-wave.store</strong>. All Rights Reserved  <a class="cta-btn" href="https://discord.gg/qvZn5TcgZ3">DISCORD</a>
+        &copy; Copyright <strong>FortniteShopping.com</strong>. All Rights Reserved  <a class="cta-btn" href="https://discord.gg/qvZn5TcgZ3">DISCORD</a>
       </div>
       <div class="credits">
         <!--
