--- a/feedback.html
+++ b/feedback.html
@@ -679,10 +679,10 @@
 
 <footer id="footer" class="footer" style="background-color: #1a1a1a;">
 <div class="container">
-<center><h1 class="shoptitle" style="color: #ff0f3d;"><b>FN-Wave.store</b></h1></center>
+<center><h1 class="shoptitle" style="color: #ff0f3d;"><b>FortniteShopping.com</b></h1></center>
 <center><p>Most Popular Fortnite account shop | 2019-2022</p></center>
 <div class="copyright">
-Copyright © 2021, FN-Wave. Inc. All rights reserved. <br> made with fortnite is a registered trademark of Epic Games, Inc. <br> Fortnite logo, and the graphics used hereby is property of Epic Games, Inc.
+Copyright © 2021, FortniteShopping.com. Inc. All rights reserved. <br> made with fortnite is a registered trademark of Epic Games, Inc. <br> Fortnite logo, and the graphics used hereby is property of Epic Games, Inc.
 </footer>
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
