--- a/BLACK KNIGHT.html
+++ b/BLACK KNIGHT.html
@@ -9,7 +9,7 @@
 <head>
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<title>FN-Wave.store | 2019-2023</title>
+<title>FortniteShopping.com | 2019-2023</title>
 <meta content="" name="description">
 <meta content="" name="keywords">
 
@@ -41,7 +41,7 @@
 <section id="values" class="pay">
 <div class="container" data-aos="fade-up">
 <header class="section-header">
-<p class="napis2" style="color: #ff0f3d;">FN-Wave </p>
+<p class="napis2" style="color: #ff0f3d;">FortniteShopping </p>
 <h2 style="color: #fff;">The best fortnite shop ever</h2>
 </header>
 <div class="row">
@@ -82,5 +82,5 @@
 
 <!-- Mirrored from fortnitemarket.xyz/BLACK KNIGHT.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 10 Dec 2021 00:08:53 GMT -->
 
-<!-- Mirrored from fn-wave.store/BLACK KNIGHT.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 10 Feb 2023 18:12:40 GMT -->
+<!-- Mirrored from e/BLACK KNIGHT.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 10 Feb 2023 18:12:40 GMT -->
 </html>
