--- a/feedback.html
+++ b/feedback.html
@@ -9,7 +9,7 @@
 <head>
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<title>FN-Wave.store | 2019-2022</title>
+<title>FortniteShopping.com| 2019-2022</title>
 <meta content="" name="description">
 <meta content="" name="keywords">
 
