--- a/renegade-checkout.html
+++ b/renegade-checkout.html
@@ -9,7 +9,7 @@
 <head>
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<title>FN-Wave.store | 2019-2023</title>
+<title>FortniteShopping.com | 2019-2023</title>
 <meta content="" name="description">
 <meta content="" name="keywords">
 
@@ -41,7 +41,7 @@
 <section id="values" class="pay">
 <div class="container" data-aos="fade-up">
 <header class="section-header">
-<p class="napis2" style="color: #ff0f3d;">FN-Wave.store </p>
+<p class="napis2" style="color: #ff0f3d;">FortniteShopping </p>
 <h2 style="color: #fff;">The best fortnite shop ever</h2>
 </header>
 <div class="row">
