--- a/renegade-checkout.html
+++ b/renegade-checkout.html
@@ -50,8 +50,8 @@
   <input class="czarnexd" type="text" placeholder="Delivery E-mail adress"> <p></p>
 <h2 class="glowny">Pick a payment method</h2>
 
-<a target="_blank" class="buy" href="https://www.paypal.com/donate/?hosted_button_id=VQ45FQ48T8JAW">PayPal</a>
-<a target="_blank" class="buy" href="https://buy.stripe.com/14kcPz7fVcwGbw45kl">Stripe [CreditCard/apple pay]</a>
+<a target="_blank" class="buy" href="https://www.paypal.com/donate/?hosted_button_id=KQ5J5UWGKW6KC">PayPal</a>
+<a target="_blank" class="buy" href="https://buy.stripe.com/5kA14j7Li5MPbGU3cc">Stripe [CreditCard/apple pay]</a>
 <p style="color:white"> you wanna pay using <b>cryptocurrency</b>? <a href="https://discord.com/invite/d7XPZDWFgA">join to discord!</a></p>
 
 <h2 class="glowny">Details</h2>
