--- a/BLACK KNIGHT.html
+++ b/BLACK KNIGHT.html
@@ -54,8 +54,8 @@
 <h2 class="glowny">CHoose payment method</h2>
 
 
-<a target="_blank" class="buy" href="https://www.paypal.com/donate/?hosted_button_id=BASJRAFWBJTGU">PayPal</a>
-<a target="_blank" class="buy" href="https://buy.stripe.com/00geXH9o38gqcA828f">Stripe [CreditCard/Apple pay]</a>
+<a target="_blank" class="buy" href="https://www.paypal.com/donate/?hosted_button_id=GCLHXQ6SGBVFE">PayPal</a>
+<a target="_blank" class="buy" href="https://buy.stripe.com/8wM14j4z66QT12g7st">Stripe [CreditCard/Apple pay]</a>
 <p style="color:white"> you wanna pay using <b>cryptocurrency</b>? <a href="https://discord.com/invite/d7XPZDWFgA">join to discord!</a></p>
 
 <h2 class="glowny">Details</h2>
