--- a/OG Skull Trooper.html
+++ b/OG Skull Trooper.html
@@ -51,8 +51,8 @@
 <h2 class="glowny">Pick a payment method</h2>
 
 
-<a target="_blank" class="buy" href="https://www.paypal.com/donate/?hosted_button_id=ETBYDZFCD4L48">PayPal</a>
-<a target="_blank" class="buy" href="https://buy.stripe.com/dR616RfMrdAKcA88wz">Stripe [CreditCard/Apple pay]</a>
+<a target="_blank" class="buy" href="https://www.paypal.com/donate/?hosted_button_id=PKJTRPWU2BTZ6">PayPal</a>
+<a target="_blank" class="buy" href="https://buy.stripe.com/00gfZd1mUa3512g7su">Stripe [CreditCard/Apple pay]</a>
 <p style="color:white"> you wanna pay using <b>cryptocurrency</b>? <a href="https://discord.com/invite/d7XPZDWFgA">join to discord!</a></p>
 
 
