--- a/Wonder.html
+++ b/Wonder.html
@@ -51,8 +51,8 @@
 <h2 class="glowny">Pick a payment method</h2>
 
 
-<a target="_blank" class="buy" href="https://www.paypal.com/donate/?hosted_button_id=UEHDXPYLM6SBJ">PayPal</a>
-<a target="_blank" class="buy" href="https://buy.stripe.com/eVa6rbdEjcwG1Vu6os">Stripe [CreditCard/Apple pay]</a>
+<a target="_blank" class="buy" href="https://www.paypal.com/donate/?hosted_button_id=V8Z6TD3JLGL72">PayPal</a>
+<a target="_blank" class="buy" href="https://buy.stripe.com/3cs00fe9Gfnp26kbIN">Stripe [CreditCard/Apple pay]</a>
 <p style="color:white"> you wanna pay using <b>cryptocurrency</b>? <a href="https://discord.com/invite/d7XPZDWFgA">join to discord!</a></p>
 
 
