--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
   <div class="overlay"></div>
   <div class="content" style="background-color:#1a1a1a;border: dashed;border-color:black" >
     <div class="close-btn" onclick="togglePopup6()">×</div>
-    <h1 style="color:black;">IKONIK</h1>
+    <h1 style="color:black;">IKONIK OUT OF STOCK</h1>
 	<p></p>
 
 	  <p style="color:black;"><img src="ok.gif" style="height:20px; width:20px;"></img><b>BONUS SKINS:</b> +90</p>
@@ -302,7 +302,7 @@
 <p style="color:black;"><img src="ok.gif" style="height:20px; width:20px;"></img><b>Access type</b>: FA [FULL ACCESS]</p>
 <p style="color:black;"><img src="ok.gif" style="height:20px; width:20px;"></img><b>Delivery</b>: INSTANT [max 5 minutes]</p>
 	  
-	  <h4 style="color:black;"><sup class="description" style="color:black;">$</sup ><b>OUT OF STOCK!</b><span></span></h4>
+	  <h4 style="color:black;"><sup class="description" style="color:black;">$</sup ><b>OUT OF STOCK</b><span></span></h4>
 	<input type="text" placeholder="Delivery E-mail adress" style="height:40px;border-top-left-radius:5px;border-top-right-radius:5px;border-bottom-right-radius:5px;border-bottom-left-radius:5px"> </>
 	                
                 <a href="https://www.paypal.com/donate/?hosted_button_id=27BKZUZ42Q4D4" class="cta-btn">Pay With Paypal/Credit Card</a>
