--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@ Im satisfy all works perfect. legit and +rep :)
 <div class="box" data-aos="fade-up" data-aos-delay="200">
 <a target="_blank" class="buy" href="feedback.html">All feedback</a>
 <p></p>
-<a target="_blank" class="buy" href="refund.html">Refund form</a>
+<a target="_blank" class="buy" href="refund.html"></a>
 
 </div>
 </div>
