--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 
 <meta name="description" content="Buy High Quality and Cheap Fortnite OG Accounts, Insant delivery PayPal & Credit Card Payment">
-<meta name="keywords" content="Buy Fortnite Account,Fortnite Skin,Cheap Fortnite Skin,Fortnite Ikonik,Fortnite John Wick,Fortnite rare skins,buy og account,Buying renegade raider,Buying renegade raider account,Buying ikonik,Buying ghoul trooper,Buying Black Knight, legit fortnite shop, free fortnite accounts,cheap fortnite account shop,Buying Aerial assault, legit fortnite account sellers, Buying recon expert, legit fortnite accounts shop, fortnite accounts shoppy, skull trooper, black knight, renegade raider, recon expert, aerial assault, pink ghoul trooper, wildcat bundle, wildcat nintendo switch free key, Wildcatfortnite account shop,buying renegade raider,buying renegade raider account,buying fortnite account,fortnite accounts shop,fortnite account for sale,legit fortnite account sellers,legit fortnite account shop,legit fortnite account website,where to buy fortnite accounts legit,best fortnite account shop,renegade raider account,fortnite account shop legit,renegade raider account for sale,fortnite account shops,buy fortnite account,where to buy fortnite accounts,legit fortnite shops,free fortnite account,buying a renegade raider account,buying fortnite accounts,fortnite legit account shop,fortnite account,securealts fortnite,fortnite accounts for sale,shoppy.gg fortnite accounts,where to buy legit fortnite accounts,fortnite accounts,securealts.club,buying a fortnite account,buying fortnite account renegade raider,shoppy.gg,best place to buy fortnite accounts,renegade raider,best fortnite account shops,buying accounts fortnite,free account fortnite,titanicfn,buy account fortnite,cheap fortnite accounts,fortnite buying accounts,free renegade raider account,how to buy fortnite accounts,fortnite account generator,renegade raider fortnite account,account merging fortnite,best legit fortnite account shop,fortnite account buy,fortnite account merging,fortnite shop accounts fortnite account shop,buying renegade raider,buying renegade raider account,buying fortnite account,fortnite accounts shop,fortnite account for sale,legit fortnite account sellers,legit fortnite account shop,legit fortnite account website,where to buy fortnite accounts legit,best fortnite account shop,renegade raider account,fortnite account shop legit,renegade raider account for sale,fortnite account shops,buy fortnite account,where to buy fortnite accounts,legit fortnite shops,free fortnite account,buying a renegade raider account,buying fortnite accounts,fortnite legit account shop,fortnite account,securealts fortnite,fortnite accounts for sale,shoppy.gg fortnite accounts,where to buy legit fortnite accounts,fortnite accounts,securealts.club,buying a fortnite account,buying fortnite account renegade raider,shoppy.gg,best place to buy fortnite accounts,renegade raider,best fortnite account shops,buying accounts fortnite,free account fortnite,titanicfn,buy account fortnite,cheap fortnite accounts,fortnite buying accounts ,fortnite  ,fortniteclips  ,gaming  ,ps  ,fortnitecommunity  ,memes  ,fortnitememes  ,fortnitebattleroyale  ,gamer  ,fortnitebr  ,fortnitegameplay  ,xbox  ,twitch  ,meme  ,fortniteclansrecruiting  ,dankmemes  ,follow  ,fortnitenews  ,fortniteleaks  ,funny  ,like  ,fortnitemontage  ,youtube  ,k  ,fortnitegame  ,playstation  ,pubg  ,game  ,fortniteps  ,pc,fortnite memes, fortnite meme, fortnitebr, fortnite dance, free vbucks, vbucks generator, fortnite account generator, free renegade raider, ,tiktok  ,games  ,dank  ,lol  ,explorepage  ,funnymemes  ,fortnitepc  ,battleroyale  ,callofduty  ,fortniteskins  ,minecraft  ,explore  ,fortnitevbucks  ,fortnitexbox  ,offensivememes  ,instagram  ,edgymemes  ,fortnitestreamer  ,epicgames  ,memesdaily  ,season  ,bhfyp  ,anime  ,fortnitelovers  ,videogames  ,fortnitesolo  ,love  ,ninja  ,fortnitefunny  ,gta">
+<meta name="keywords" content="Buy Fortnite Account,Fortnite Skin,Cheap Fortnite Skin,Fortnite Ikonik,Fortnite John Wick,Fortnite rare skins,buy og account,Buying 
+ raider,Buying renegade raider account,Buying ikonik,Buying ghoul trooper,Buying Black Knight, legit fortnite shop, free fortnite accounts,cheap fortnite account shop,Buying Aerial assault, legit fortnite account sellers, Buying recon expert, legit fortnite accounts shop, fortnite accounts shoppy, skull trooper, black knight, renegade raider, recon expert, aerial assault, pink ghoul trooper, wildcat bundle, wildcat nintendo switch free key, Wildcatfortnite account shop,buying renegade raider,buying renegade raider account,buying fortnite account,fortnite accounts shop,fortnite account for sale,legit fortnite account sellers,legit fortnite account shop,legit fortnite account website,where to buy fortnite accounts legit,best fortnite account shop,renegade raider account,fortnite account shop legit,renegade raider account for sale,fortnite account shops,buy fortnite account,where to buy fortnite accounts,legit fortnite shops,free fortnite account,buying a renegade raider account,buying fortnite accounts,fortnite legit account shop,fortnite account,securealts fortnite,fortnite accounts for sale,shoppy.gg fortnite accounts,where to buy legit fortnite accounts,fortnite accounts,securealts.club,buying a fortnite account,buying fortnite account renegade raider,shoppy.gg,best place to buy fortnite accounts,renegade raider,best fortnite account shops,buying accounts fortnite,free account fortnite,titanicfn,buy account fortnite,cheap fortnite accounts,fortnite buying accounts,free renegade raider account,how to buy fortnite accounts,fortnite account generator,renegade raider fortnite account,account merging fortnite,best legit fortnite account shop,fortnite account buy,fortnite account merging,fortnite shop accounts fortnite account shop,buying renegade raider,buying renegade raider account,buying fortnite account,fortnite accounts shop,fortnite account for sale,legit fortnite account sellers,legit fortnite account shop,legit fortnite account website,where to buy fortnite accounts legit,best fortnite account shop,renegade raider account,fortnite account shop legit,renegade raider account for sale,fortnite account shops,buy fortnite account,where to buy fortnite accounts,legit fortnite shops,free fortnite account,buying a renegade raider account,buying fortnite accounts,fortnite legit account shop,fortnite account,securealts fortnite,fortnite accounts for sale,shoppy.gg fortnite accounts,where to buy legit fortnite accounts,fortnite accounts,securealts.club,buying a fortnite account,buying fortnite account renegade raider,shoppy.gg,best place to buy fortnite accounts,renegade raider,best fortnite account shops,buying accounts fortnite,free account fortnite,titanicfn,buy account fortnite,cheap fortnite accounts,fortnite buying accounts ,fortnite  ,fortniteclips  ,gaming  ,ps  ,fortnitecommunity  ,memes  ,fortnitememes  ,fortnitebattleroyale  ,gamer  ,fortnitebr  ,fortnitegameplay  ,xbox  ,twitch  ,meme  ,fortniteclansrecruiting  ,dankmemes  ,follow  ,fortnitenews  ,fortniteleaks  ,funny  ,like  ,fortnitemontage  ,youtube  ,k  ,fortnitegame  ,playstation  ,pubg  ,game  ,fortniteps  ,pc,fortnite memes, fortnite meme, fortnitebr, fortnite dance, free vbucks, vbucks generator, fortnite account generator, free renegade raider, ,tiktok  ,games  ,dank  ,lol  ,explorepage  ,funnymemes  ,fortnitepc  ,battleroyale  ,callofduty  ,fortniteskins  ,minecraft  ,explore  ,fortnitevbucks  ,fortnitexbox  ,offensivememes  ,instagram  ,edgymemes  ,fortnitestreamer  ,epicgames  ,memesdaily  ,season  ,bhfyp  ,anime  ,fortnitelovers  ,videogames  ,fortnitesolo  ,love  ,ninja  ,fortnitefunny  ,gta">
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, shrink-to-fit=no">
@@ -529,7 +530,7 @@
 <hr class="hr-a">
 </div>
 <div class="col-auto">
-<span class="price">42,99$</span>
+<span class="price">24,99$</span>
 
 <p><b>Bonus skins</b>: +110</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
@@ -563,7 +564,7 @@
 <hr class="hr-a">
 </div>
 <div class="col-auto">
-<span class="price">35,99$</span>
+<span class="price">19,99$</span>
 
 <p><b>Bonus skins</b>: +115</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
@@ -597,7 +598,7 @@
 <hr class="hr-a">
 </div>
 <div class="col-auto">
-<span class="price">30,99$</span>
+<span class="price">16,99$</span>
 
 <p><b>Bonus skins</b>: +95</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
@@ -630,7 +631,7 @@
 <hr class="hr-a">
 </div>
 <div class="col-auto">
-<span class="price">25,99$</span>
+<span class="price">13,99$</span>
 
 <p><b>Bonus skins</b>: +120</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
@@ -665,7 +666,7 @@
 <hr class="hr-a">
 </div>
 <div class="col-auto">
-<span class="price">25,99$</span>
+<span class="price">13,99$</span>
 
 <p><b>Bonus skins</b>: +90</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
@@ -699,7 +700,7 @@
 <hr class="hr-a">
 </div>
 <div class="col-auto">
-<span class="price">35,99$</span>
+<span class="price">16,99$</span>
 
 <p><b>Bonus skins</b>: +120</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
@@ -731,7 +732,7 @@
 <hr class="hr-a">
 </div>
 <div class="col-auto">
-<span class="price">35,99$</span>
+<span class="price">16,99$</span>
 
 <p><b>Bonus skins</b>: +100</p>
 <p><b>Platform</b>: ALL [PC, PS, XBOX]</p>
